# cursedtypist

./: .gitignore  .pylintrc  README.md  pyproject.toml  setup.py
cursedtypist/: __main__.py  events.py  game.py  params.py  screen.py
cursedtypist/frontend/: __init__.py  curses_frontend.py
src/cursedtypist/: __init__.py  game.py  params.py
src/cursedtypist/frontend/: curses_frontend.py
tests/: test_game.py
tests/e2e/: curses_frontend.py
