[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cursedtypist"
version = "0.1.0"
authors = [
    { name="Maxim Petrov", email="mmrmaximuzz@gmail.com" },
]
description = "Simple typing game inspired by babytype."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX",
    "Environment :: Console :: Curses",
    "Topic :: Games/Entertainment :: Arcade",
]

[project.urls]
"Homepage" = "https://github.com/mrmaximuzz/cursedtypist"

[project.optional-dependencies]
testing = [
    'pytest=7.2.0',
    'pytest-cov=4.0.0',
    'pytest-mock=3.10.0',
]
